# transformer-recommenders

./: .gitignore  .markdownlint.yaml  .mega-linter.yml  .pre-commit-config.yaml  .yamlfmt  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  config.yaml  pyproject.toml  renovate.json
.github/: copilot-instructions.md  dependabot.yml  release.yml
.github/workflows/: automerge.yml  ci.yml  ossf.yml  pr.yml  scans.yml
tests/: test_recommender.py
tests/mf/: test_load.py
xfmr_rec/: __init__.py  data.py  deploy.py  flaml.py  index.py  lightning.py  losses.py  metrics.py  models.py  params.py  ray.py  service.py  trainer.py
xfmr_rec/bentoml/: prepare.py  service.py
xfmr_rec/common/: deploy.py  service.py  trainer.py
xfmr_rec/data/: lightning.py  prepare.py
xfmr_rec/mf/: __init__.py  data.py  deploy.py  service.py  trainer.py  tune.py
xfmr_rec/seq/: __init__.py  data.py  datamodule.py  deploy.py  models.py  service.py  trainer.py  tune.py
xfmr_rec/seq_embedded/: __init__.py  data.py  deploy.py  models.py  service.py  trainer.py
