[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "xfmr_rec"
version = "0.1.0"
description = "Transformer Recommender Models in PyTorch with MovieLens"
authors = [
  { name = "YuXuan Tay", email = "5795122+yxtay@users.noreply.github.com" },
]
license = "MIT"
requires-python = ">=3.12,<4"
dependencies = [
  "bentoml~=1.3",
  "datasets~=4.0",
  "faiss-cpu>=1.12.0",
  "jsonargparse[signatures]~=4.35",
  "lancedb>=0.19,<1.0",
  "lightning~=2.5,<2.5.1",
  "loguru>=0.7,<1.0",
  "mlflow-skinny~=3.1",
  "polars[pandas]~=1.19",
  "pylance>=0.32.1",
  "sentence-transformers[onnx,train]~=5.0",
  "tensorboard~=2.18",
  "torch~=2.5",
]

[dependency-groups]
dev = [
  "flaml[automl,blendsearch]~=2.3",
  "mlflow",
  "rich!=14.1.0",
  "pytest~=8.4",
  "standard-imghdr~=3.13",
]

[project.scripts]
data = "xfmr_rec.data:main"
flaml = "xfmr_rec.flaml:main"
seq_deploy = "xfmr_rec.seq.deploy:main"
seq_train = "xfmr_rec.seq.trainer:main"
seq_tune = "xfmr_rec.seq.tune:main"
seq_embedded_deploy = "xfmr_rec.seq_embedded.deploy:main"
seq_embedded_train = "xfmr_rec.seq_embedded.trainer:main"


[tool.bentoml.build]
service = "xfmr_rec.seq.service:Service"
description = "file: ./README.md"
include = ["**/*.py", "README.md"]
envs = [{ name = "UV_NO_CACHE", value = "1" }]

[tool.bentoml.build.python]
packages = [
  "datasets",
  "lancedb",
  "loguru",
  "pylance",
  "sentence-transformers[onnx]",
]
extra_index_url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
torch = [{ index = "torch-cpu" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
fix = true
src = [".", "src", "tests"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",       # pydocstyle
  "E501",    # line-too-long
  "S101",    # assert
  "S311",    # suspicious-non-cryptographic-random-usage
  "T201",    # print
  "COM812",  # missing-trailing-comma, conflicts with ruff formatter
  "ERA001",  # commented-out-code
  "ISC001",  # single-line-implicit-string-concatenation, conflicts with ruff formatter
  "PLC0415", # import-outside-top-level
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
